--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ dependencies {
 	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 	implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.0.Final'
 	implementation group: 'commons-fileupload', name:'commons-fileupload', version:'1.3.3'
+	implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.4.2'
+	implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.4.2'
+	implementation group: 'org.springframework.security', name: 'spring-security-taglibs', version: '5.4.2'
+	implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity5', version: '3.0.4.RELEASE'
 }
 
 test {
