--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=${port:8081}
+
 #Cung c?p thông tin cho String boot bi?t kêt n?i v?i CSDL.
 spring.datasource.url=jdbc:mysql://localhost:3306/account-management-springboot
 spring.datasource.username=root
